force-app/main/default/objects/JBT_RET_TRANSCRIPT_SENT_VW__x/JBT_RET_TRANSCRIPT_SENT_VW__x.object-meta.xml
<CustomObject>
    <description>Source script = indicators_transcript_sent</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>JBT_RET_TRANSCRIPT_SENT_VWs</externalName>
    <label>Transcript Sent (external)</label>
    <pluralLabel>Transcript Sent (external)</pluralLabel>
</CustomObject>