force-app/main/default/objects/JBT_RET_TRANSCRIPT_SENT_VW__x/fields/ADDRESS1__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS1__c</fullName>
    <description>Data sourced from PS_ASU_REQUEST_DTL.ADDRESS1</description>
    <externalDeveloperName>ADDRESS1</externalDeveloperName>
    <label>Recipient Address 1</label>
    <length>55</length>
    <type>Text</type>
</CustomField>