force-app/main/default/objects/JBT_RET_TRANSCRIPT_SENT_VW__x/fields/ADDRESS2__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS2__c</fullName>
    <description>Data sourced from PS_ASU_REQUEST_DTL.ADDRESS2</description>
    <externalDeveloperName>ADDRESS2</externalDeveloperName>
    <label>Recipient Address 2</label>
    <length>55</length>
    <type>Text</type>
</CustomField>