force-app/main/default/objects/JBT_RET_TRANSCRIPT_SENT_VW__x/fields/ADDRESS3__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS3__c</fullName>
    <description>Data sourced from PS_ASU_REQUEST_DTL.ADDRESS3</description>
    <externalDeveloperName>ADDRESS3</externalDeveloperName>
    <label>Recipient Address 3</label>
    <length>55</length>
    <type>Text</type>
</CustomField>