force-app/main/default/objects/JBT_RET_TRANSCRIPT_SENT_VW__x/fields/CITY__c.field-meta.xml
<CustomField>
    <fullName>CITY__c</fullName>
    <description>Data sourced from PS_ASU_REQUEST_DTL.CITY</description>
    <externalDeveloperName>CITY</externalDeveloperName>
    <label>Recipient City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>