force-app/main/default/objects/JBT_RET_TRANSCRIPT_SENT_VW__x/fields/COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY__c</fullName>
    <description>Data sourced from PS_ASU_REQUEST_DTL.COUNTRY</description>
    <externalDeveloperName>COUNTRY</externalDeveloperName>
    <label>Recipient Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>