force-app/main/default/objects/JBT_RET_TRANSCRIPT_SENT_VW__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from PS_ASU_REQUEST_DTL.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transcript Sent (external)</relationshipLabel>
    <relationshipName>Transcript_Sent_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>