force-app/main/default/objects/JBT_RET_TRANSCRIPT_SENT_VW__x/fields/POSTAL__c.field-meta.xml
<CustomField>
    <fullName>POSTAL__c</fullName>
    <description>Data sourced from PS_ASU_REQUEST_DTL.POSTAL</description>
    <externalDeveloperName>POSTAL</externalDeveloperName>
    <label>Recipient Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>