force-app/main/default/objects/JBT_RET_TRANSCRIPT_SENT_VW__x/fields/REQUEST_OR_SENT_DATE__c.field-meta.xml
<CustomField>
    <fullName>REQUEST_OR_SENT_DATE__c</fullName>
    <description>Data sourced from PS_ASU_TSCPT_REQST.UPDATED_DTTM or PS_ASU_TSCPT_REQST.CREATED_DTTM</description>
    <externalDeveloperName>REQUEST_OR_SENT_DATE</externalDeveloperName>
    <label>Request Datetime</label>
    <type>DateTime</type>
</CustomField>