force-app/main/default/objects/JBT_RET_TRANSCRIPT_SENT_VW__x/fields/SEND_TO_NAME__c.field-meta.xml
<CustomField>
    <fullName>SEND_TO_NAME__c</fullName>
    <description>Data sourced from PS_ASU_REQUEST_DTL.SEND_TO_NAME</description>
    <label>Recipient Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>