force-app/main/default/objects/JBT_RET_TRANSCRIPT_SENT_VW__x/fields/STATE__c.field-meta.xml
<CustomField>
    <fullName>STATE__c</fullName>
    <description>Data sourced from PS_ASU_REQUEST_DTL.STATE</description>
    <externalDeveloperName>STATE</externalDeveloperName>
    <label>Recipient State Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>