force-app/main/default/objects/JBT_RET_TRANSCRIPT_SENT_VW__x/fields/STATUS__c.field-meta.xml
<CustomField>
    <fullName>STATUS__c</fullName>
    <description>Data sourced from Derived.STATUS</description>
    <label>Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>